Ajout d'une fonctionnalité WIP
Passage en v1.6.0.0, seul le bouton est présent pour le moment. Il ne
fait qu'afficher un texte.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,3 +7,8 @@
 	content: "\f338";
 	top: 3px;
 }
+
+#wpadminbar #wp-admin-bar-imputation_recall .ab-icon:before{
+	content: "\f227";
+	top: 3px;
+}
