Ajout d'une fonctionnalité "Moins" pour le nombre d'appel
Prévenir tout le monde

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,3 +12,8 @@
 	content: "\f227";
 	top: 3px;
 }
+
+#wpadminbar #wp-admin-bar-imputation_tel_moins .ab-icon:before{
+	content: "\f460";
+	top: 3px;
+}
